--- a/Module1/concepts/hoisting.html
+++ b/Module1/concepts/hoisting.html
@@ -18,7 +18,7 @@
 
         // Hoisting is possible in let and const but because let and const are stored in temporal dead zone before initialization
         // thats we cannot access variables in the temporal dead zone !!
-        console.log(a);
+        // console.log(a);
         let a = "Steve";
         console.log(a); 
 
