--- a/Module2/Todo_App/activity/index.html
+++ b/Module2/Todo_App/activity/index.html
@@ -1,28 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Todo App</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="todo-input-container">
-        <input type="text" class="todo-input">
-        <button class="add-todo">Add ToDo</button>
+      <input type="text" class="todo-input" />
+      <button class="add-todo">Add Todo</button>
     </div>
-    <div class="todo-item">
-        <p class="todo-input">Learn Css</p>
-        <button class="delete-todo">Delete</button>
+    <div class="todos-list-container">
+        
     </div>
-    <div class="todo-item">
-        <p class="todo-input">Learn html</p>
-        <button class="delete-todo">Delete</button>
-    </div>
-    <div class="todo-item">
-        <p class="todo-input">Learn React</p>
-        <button class="delete-todo">Delete</button>
-    </div>
-    
-</body>
+
+    <script src="./script.js"></script>
+  </body>
 </html>
