--- a/Module2/Ticket_App/activity/index.html
+++ b/Module2/Ticket_App/activity/index.html
@@ -19,7 +19,7 @@
             <div class="filter black"></div>
         </div>
 
-        <div class="tickets-actions">
+        <div class="ticket-actions">
             <div class="open-modal">
                 <i class="fas fa-plus"></i>
             </div>
@@ -29,7 +29,6 @@
         </div>
     </div>
     <div class="tickets-container">
-
     </div>
     <script src="./script.js"></script>
 </body>
