--- a/Module2/Ticket_App/activity/index.html
+++ b/Module2/Ticket_App/activity/index.html
@@ -29,7 +29,20 @@
         </div>
     </div>
     <div class="tickets-container">
+        <!-- <div class="ticket">
+            <div class="ticket_color_head"></div>
+            <div class="ticket_code_delete">
+                <div class="code">#121213123</div>
+                <div class="delete_ticket">
+                    <i class="fas fa-trash-alt"></i>
+                </div>
+            </div>
+            <div class="show-ticket-content"></div>
+        </div> -->
+        
+        
     </div>
+
     <script src="./script.js"></script>
 </body>
 </html>
