--- a/Module2/WhiteBoard/activity/index.html
+++ b/Module2/WhiteBoard/activity/index.html
@@ -10,30 +10,34 @@
   <body>
     <div class="tools-container">
       <div class="tools-content">
-        <div class="tool"><img src="./NewIcons/Black_Pencil.svg" alt="" /></div>
-        <div class="tool"><img src="./NewIcons/Eraser.svg" alt="" /></div>
-        <div class="tool" id="undo">
-          <img src="./NewIcons/Undo.svg" alt="" />
+        <div class="tool" id="pen">
+          <img src="NewIcons/Black_Pencil.svg" alt="" />
+          
         </div>
-        <div class="tool" id="redo">
-          <img src="./NewIcons/Redo.svg" alt="" />
+        <div class="tool" id="eraser">
+          <img src="NewIcons/Eraser.svg" alt="" />
         </div>
-        <div class="tool" id="sticky">
-          <img src="./NewIcons/StickyNote.svg" alt="" />
+        <div class="tool" id="undo"><img src="NewIcons/undo.svg" alt="" /></div>
+        <div class="tool" id="redo"><img src="NewIcons/redo.svg" alt="" /></div>
+        <div class="tool" id="StickyNote">
+          <img src="NewIcons/StickyNote.svg" alt="" />
         </div>
         <div class="tool" id="photo">
-          <img src="./NewIcons/Photo.svg" alt="" />
-          <input type="file" name="" id="">
+          <img src="NewIcons/Photo.svg" alt="" />
+          <input type="file" id="photo-upload" />
         </div>
-        <div class="tool"><img src="./NewIcons/Download.svg" alt="" /></div>
+        <div class="tool" id="download">
+          <img src="NewIcons/Download.svg" alt="" />
+        </div>
       </div>
     </div>
     <div class="drawing-container">
       <canvas id="canvas"></canvas>
     </div>
 
-    <script src="./script.js"></script>
-    <script src="./tools.js"></script>
-    <script src="./sticky.js"></script>
+    <script src="script.js"></script>
+    <script src="tools.js"></script>
+    <script src="sticky.js"></script>
+    <script src="img.js"></script>
   </body>
 </html>
