--- a/Module2/WhiteBoard/activity/index.html
+++ b/Module2/WhiteBoard/activity/index.html
@@ -10,24 +10,44 @@
   <body>
     <div class="tools-container">
       <div class="tools-content">
-        <div class="tool" id="pen">
-          <img src="NewIcons/Black_Pencil.svg" alt="" />
-          
+        <div class="tool active-tool" id="pen">
+          <img src="./NewIcons/Black_Pencil.svg" alt="" />
+          <div class="tool-options hide">
+            <div class="pen-size">
+              <input type="range" id="pensize" value="1" min="1" max="40" />
+            </div>
+            <div class="pen-colors">
+              <div class="black"></div>
+              <div class="yellow"></div>
+              <div class="blue"></div>
+              <div class="green"></div>
+              <div class="red"></div>
+            </div>
+          </div>
         </div>
-        <div class="tool" id="eraser">
-          <img src="NewIcons/Eraser.svg" alt="" />
+        <div class="tool fade" id="eraser">
+          <img src="./NewIcons/Eraser.svg" alt="" />
+          <div class="tool-options hide">
+            <div class="eraser-size">
+              <input type="range" id="erasersize" value="1" min="1" max="40" />
+            </div>
+          </div>
         </div>
-        <div class="tool" id="undo"><img src="NewIcons/undo.svg" alt="" /></div>
-        <div class="tool" id="redo"><img src="NewIcons/redo.svg" alt="" /></div>
-        <div class="tool" id="StickyNote">
-          <img src="NewIcons/StickyNote.svg" alt="" />
+        <div class="tool" id="undo">
+          <img src="./NewIcons/Undo.svg" alt="" />
+        </div>
+        <div class="tool" id="redo">
+          <img src="./NewIcons/Redo.svg" alt="" />
+        </div>
+        <div class="tool" id="sticky">
+          <img src="./NewIcons/StickyNote.svg" alt="" />
         </div>
         <div class="tool" id="photo">
-          <img src="NewIcons/Photo.svg" alt="" />
-          <input type="file" id="photo-upload" />
+          <img src="./NewIcons/Photo.svg" alt="" />
+          <input type="file" class="hide" name="" id="photo-upload" />
         </div>
         <div class="tool" id="download">
-          <img src="NewIcons/Download.svg" alt="" />
+          <img src="./NewIcons/Download.svg" alt="" />
         </div>
       </div>
     </div>
@@ -35,9 +55,10 @@
       <canvas id="canvas"></canvas>
     </div>
 
-    <script src="script.js"></script>
-    <script src="tools.js"></script>
-    <script src="sticky.js"></script>
-    <script src="img.js"></script>
+    <script src="./script.js"></script>
+    <script src="./tools.js"></script>
+    <script src="./sticky.js"></script>
+    <script src="./img.js"></script>
+    <script src="./drawingTool.js"></script>
   </body>
 </html>
