--- a/Module2/PepSnap/activity/index.html
+++ b/Module2/PepSnap/activity/index.html
@@ -10,7 +10,8 @@
     <div class="video-conatiner">
         <video controls autoplay></video>
     </div>
+    <button id="record">Record Video</button>
+    <script src="/activity/script.js"></script>
 </body>
 
 </html>
-<script src="script.js"></script>
