--- a/Module2/PepSnap/activity/index.html
+++ b/Module2/PepSnap/activity/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="video-container">
-        <video controls autoplay></video>
+      <video controls autoplay></video>
     </div>
-    <button id="record">Record Video</button>
-    <button id="capture">Capture</button>
+    <div class="controls">
+      <div id="record">
+        <div id="inner-record"></div>
+      </div>
+      
+      <div id="capture">
+          <div id="inner-capture"></div>
+    </div>
+
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
